<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp">

    <!--        cvStudent-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnStudent"
        android:layout_width="@dimen/dp164"
        android:layout_height="@dimen/dp40"
        android:layout_weight="1"
        android:backgroundTint="@color/lightGreen_E9FFF5"
        app:cardCornerRadius="@dimen/dp21"
        app:shapeAppearanceOverlay="@style/RoundedCard"
        app:strokeColor="@color/green_198754"
        app:strokeWidth="1.4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/dp39"
                android:layout_height="@dimen/dp44"
                android:src="@drawable/ic_student" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/student"
                android:textColor="@color/green_198754"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <Space
        android:layout_width="@dimen/dp10"
        android:layout_height="wrap_content" />


    <!--cvCollege        -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnCollege"
        android:layout_width="@dimen/dp164"
        android:layout_height="@dimen/dp40"
        android:layout_weight="1"
        android:backgroundTint="@color/lightYellow_FFFBF0"
        app:cardCornerRadius="@dimen/dp21"
        app:shapeAppearanceOverlay="@style/RoundedCard"
        app:strokeColor="@color/lightYellow_FFFBF0"
        app:strokeWidth="1.4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_college"
                android:layout_width="@dimen/dp56"
                android:layout_height="@dimen/dp29"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/collegeIcon"
                android:src="@drawable/ic_college" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/college"
                android:textColor="@color/yellow_FFC105"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
