<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.activity.CompleteProfileStep1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        header_with_steps-->
        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/llHeaderStep1"
                layout="@layout/header_with_steps" />

        </LinearLayout>
        <!--      llUploadPhoto-->
        <LinearLayout
            android:id="@+id/llUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llHeader"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivUploadProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp18"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="Upload profile picture"
                android:textColor="@color/black_0E1C0F"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <!--        LinearLayout userInfo-->

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llUploadImage"
            android:layout_marginTop="@dimen/dp25">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llUploadImage"
                android:layout_marginHorizontal="@dimen/dp10"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llFulName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="start|center_vertical"
                        android:singleLine="true"
                        android:text="@string/full_name"
                        android:textColor="@color/gray_777777"
                        android:textColorHint="@color/gray_6C7278"
                        android:textSize="@dimen/sp14" />

                    <EditText
                        android:id="@+id/etFullName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:layout_marginTop="@dimen/dp2"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="start|center_vertical"
                        android:hint="@string/user_name"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLength="30"
                        android:paddingHorizontal="@dimen/dp10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_6C7278"
                        android:textSize="@dimen/sp16" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tvFatherNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/gray_6C7278"
                    android:textColorHint="@color/gray_6C7278"
                    android:textSize="@dimen/sp14" />

                <LinearLayout
                    android:id="@+id/llDOB"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp46"
                    android:background="@drawable/edit_text_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDOB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginHorizontal="@dimen/dp20"
                        android:layout_weight="1"
                        android:hint="@string/dd_mm_yyyy" />

                    <ImageView
                        android:id="@+id/btnCalender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_marginHorizontal="20dp"
                        android:src="@drawable/ic_calendar" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:text="Gender*"
                    android:textColor="@color/gray_6C7278"
                    android:textColorHint="@color/gray_6C7278"
                    android:textSize="@dimen/sp14" />

                <RelativeLayout
                    android:id="@+id/rlGuardianRelation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp46"
                    android:layout_marginTop="@dimen/dp2"
                    android:background="@drawable/edit_text_bg">

                    <TextView
                        android:id="@+id/tvGuardianRelation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="@dimen/dp10"
                        android:layout_toStartOf="@id/ivGuardianRelation"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="start|center_vertical"
                        android:hint="@string/select"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_6C7278"
                        android:textSize="@dimen/sp16" />

                    <ImageView
                        android:id="@+id/ivGuardianRelation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="@dimen/dp10"
                        android:src="@drawable/ic_downarrow" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:text="Mobile Number*"
                    android:textColor="@color/gray_6C7278"
                    android:textColorHint="@color/gray_6C7278"
                    android:textSize="@dimen/sp14" />

                <LinearLayout
                    android:id="@+id/llEtMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_country_code"
                        android:layout_width="@dimen/dp66"
                        android:layout_height="@dimen/dp44"
                        android:background="@drawable/layout_boarder"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivCountryFlag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_india" />

                        <ImageView
                            android:id="@+id/ic_down_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/downarrow"
                            android:src="@drawable/ic_downarrow" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp45"
                        android:background="@drawable/layout_boarder"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobileNo"
                            android:layout_width="@dimen/dp0"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/gray_6BFFFFFF"
                            android:hint="@string/enter_number"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingHorizontal="@dimen/dp10"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/lightGray_BDBDBD"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/sp16" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="start|center_vertical"
                        android:singleLine="true"
                        android:text="Email"
                        android:textColor="@color/gray_777777"
                        android:textColorHint="@color/gray_6C7278"
                        android:textSize="@dimen/sp14" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:layout_marginTop="@dimen/dp2"
                        android:background="@drawable/edit_text_bg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="start|center_vertical"
                        android:hint="@string/email_address"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLength="50"
                        android:paddingHorizontal="@dimen/dp10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_6C7278"
                        android:textSize="@dimen/sp16" />

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCompletedProfileStep1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp54"
                    android:layout_marginTop="@dimen/dp44"
                    android:backgroundTint="@color/green_8CC3AA"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/next"
                    android:textSize="@dimen/sp16" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</LinearLayout>

