<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dp10">

    <RelativeLayout
        android:id="@+id/rl_Header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/dp30"
            android:ellipsize="end"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dp10"
            android:text="@string/complete_your_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dp4"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/dp10"
            android:src="@drawable/ic_arrow_back" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_Header"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp20">

        <TextView
            android:id="@+id/tvStepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/step_1_5"
            android:textColor="@color/black_0E1C0F"
            android:textSize="@dimen/sp12" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="end"
            android:text="@string/personal_details"
            android:textColor="@color/black_0E1C0F"
            android:textSize="@dimen/sp12" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rlStepIndicatorDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llStep"
        android:layout_marginTop="@dimen/dp10"
        android:paddingHorizontal="@dimen/dp10">

        <LinearLayout
            android:id="@+id/llStepIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp10"
            android:orientation="horizontal"
            android:weightSum="5">

            <View
                android:id="@+id/viewStep1"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_green_rounded" />

            <View
                android:id="@+id/viewStep2"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_gray_rounded" />

            <View
                android:id="@+id/viewStep3"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_gray_rounded" />

            <View
                android:id="@+id/viewStep4"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_gray_rounded" />

            <View
                android:id="@+id/viewStep5"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_gray_rounded" />


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>